--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,11 +2,13 @@
 <resources>
 
     <string name="app_name">surespot</string>
-    <string name="hello_world">Credential Management</string>
+    <string name="hello_world">hello world</string>
+    <string name="friends">friends</string>
     <string name="menu_settings">Settings</string>
     <string name="username_label">username:</string>
     <string name="password_label">password:</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_credential_management">CredentialManagementActivity</string>
+    <string name="title_activity_friends">FriendsActivity</string>
 
 </resources>
