--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,14 +2,13 @@
 <resources>
 
     <string name="app_name">surespot</string>
-    <string name="hello_world">hello world</string>
     <string name="friends">friends</string>
     <string name="menu_settings">Settings</string>
     <string name="username_label">username:</string>
     <string name="password_label">password:</string>
-    <string name="title_activity_main">MainActivity</string>
-    <string name="title_activity_signup">Signup</string>
-    <string name="title_activity_friends">Friends</string>
-   	<string name="title_activity_notifications">Notifications</string>
+    <string name="title_activity_main">surespot</string>
+    <string name="title_activity_signup">signup</string>
+    <string name="title_activity_friends">friends</string>
+   	<string name="title_activity_notifications">notifications</string>
 
 </resources>
