--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="pref_notifications_sound">pref_notifications_sound"</string>
     <string name="pref_notifications_vibration">pref_notifications_vibration"</string>
     <string name="pref_notifications_led">pref_notifications_led"</string>
+    <string name="camera_init">initializing camera"</string>
 
 </resources>
