--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -48,5 +48,7 @@
     <string name="no_friends">No friends...yet. Invite friends by entering their username and touching &amp;apos;invite friend&amp;apos;.</string>
     <string name="navigate_between_chat_tabs">Navigate between chat tabs by swiping.</string>
     <string name="early_pre_beta">This is early pre-beta software, your logins and encrypted conversatations can and probably will be erased at any time. If this happens you will need to &amp;apos;Clear data&amp;apos; for the surespot application in your phone and create a new user.</string>
+    <string name="incorrect_password_or_key">incorrect password or key</string>
+    <string name="no_such_user">no such user</string>
 
 </resources>
