--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="export_identity_label">export identity...</string>
     <string name="import_identities">import identities...</string>
     <string name="create_identity_label">create new identity...</string>
+    <string name="pref_create_identity">pref_create_identity</string>
     <string name="no_identity_exported">no identity exported</string>
     <string name="no_identity_imported">no identity imported</string>
     <string name="identity_imported_successfully">identity imported successfully</string>
