--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -46,9 +46,13 @@
     <string name="logout">logout</string>
     <string name="settings">settings</string>
     <string name="welcome_to_surespot">Welcome to surespot. Messages sent using this software are end to end encrypted using 256 bit AES and 512+ bit ECC key exchange. Enjoy.</string>
-    <string name="no_friends">No friends...yet. Invite friends by entering their username and touching &amp;apos;invite friend&amp;apos;.</string>
-    <string name="navigate_between_chat_tabs">Navigate between chat tabs by swiping.</string>
-    <string name="early_pre_beta">This is early pre-beta software, your logins and encrypted conversatations can and probably will be erased at any time. If this happens you will need to &amp;apos;Clear data&amp;apos; for the surespot application in your phone and create a new user.</string>
+    <string name="no_friends">No friends...yet. Invite friends by entering their username and touching "invite".</string>
+    <string name="help_shortPress">Short press "home" to go to the home tab.</string>
+    <string name="help_longPress">Long press "home" to close the chat tab.</string>
+    <string name="navigate_between_chat_tabs">Navigate between tabs by swiping.</string>
+    <string name="help_delete">Delete messages by long pressing the message. This will remove the message from the server and remote devices.</string>
+    <string name="help_imageZoom">Zoom images by clicking on the image.</string>
+    <string name="early_pre_beta">This is early pre-beta software, your logins and encrypted conversatations can and probably will be erased at any time. If this happens you will need to "Clear data" for the surespot application in your phone and create a new user.</string>
     <string name="incorrect_password_or_key">incorrect password or key</string>
     <string name="no_such_user">no such user</string>
     <string name="roll_keys">roll keys</string>
@@ -58,5 +62,7 @@
     <string name="keys_created">keys created and successfully uploaded to the server</string>
     <string name="close_tab">close tab</string>
     <string name="action_settings">Settings</string>
+    <string name="no_messages">no messages</string>
+    <string name="home">home</string>
 
 </resources>
