external invites handle INSTALL_REFERRER send auto add token to server on login or signup

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -65,5 +65,6 @@
     <string name="no_messages">no messages</string>
     <string name="home">home</string>
     <string name="delete_message">delete message</string>
+    <string name="title_activity_external_invite">ExternalInviteActivity</string>
 
 </resources>
