--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -66,5 +66,6 @@
     <string name="home">home</string>
     <string name="delete_message">delete message</string>
     <string name="title_activity_external_invite">ExternalInviteActivity</string>
+    <string name="title_activity_contact_picker">ContactPickerActivity</string>
 
 </resources>
