--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,26 +11,26 @@
     <string name="title_activity_friends">friends</string>
     <string name="title_activity_notifications">notifications</string>
     <string name="hello_world">Hello world!</string>
-    <string name="export_sd">export to external storage</string>
-    <string name="import_sd">import from external storage</string>
-    <string name="title_activity_chat">ChatActivity</string>
-    <string name="title_activity_image_view">ImageViewActivity</string>
-    <string name="title_activity_image_select">ImageSelectActivity</string>
-    <string name="title_activity_identity_management">IdentityManagementActivity</string>
-    <string name="title_activity_settings">SettingsActivity</string>
-    <string name="title_activity_export_identity">ExportIdentityActivity</string>
-    <string name="import_identity_label">import identity...</string>
-    <string name="export_identity_label">export identity...</string>
+    <string name="export_sd">backup to external storage</string>
+    <string name="import_sd">restore from external storage</string>
+    <string name="title_activity_chat">chat</string>
+    <string name="title_activity_image_view">image view</string>
+    <string name="title_activity_image_select">image select</string>
+    <string name="title_activity_identity_management">identity management</string>
+    <string name="title_activity_settings">settings</string>
+    <string name="title_activity_export_identity">backup identity</string>
+    <string name="import_identity_label">restore identity...</string>
+    <string name="export_identity_label">backup identity...</string>
     
     <string name="delete_identity">delete identity...</string>
-    <string name="import_identities">import identity...</string>
+    <string name="import_identities">restore identity...</string>
     <string name="create_identity_label">create new identity...</string>
     <string name="pref_create_identity">pref_create_identity</string>
-    <string name="no_identity_exported">no identity exported</string>
-    <string name="no_identity_imported">no identity imported</string>
+    <string name="no_identity_exported">no identity backed up</string>
+    <string name="no_identity_imported">no identity restored</string>
     <string name="no_identity_deleted">no identity deleted</string>
-    <string name="identity_imported_successfully">identity imported successfully</string>
-    <string name="could_not_import_identity">could not import identity</string>
+    <string name="identity_imported_successfully">identity restored successfully</string>
+    <string name="could_not_import_identity">could not restore identity</string>
     <string name="notifications_title">notifications</string>
     <string name="notifications_vibration">vibration</string>
     <string name="notifications_sound">sound</string>
