homepage layout tweaks

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -71,5 +71,7 @@
     <string name="title_activity_external_invite">ExternalInviteActivity</string>
     <string name="title_activity_contact_picker">ContactPickerActivity</string>
     <string name="crash_toast_text">Unfortunately surespot just crashed. A report containing no personally identifying information has been sent to the developer.</string>
-
+	<string name="block_underline"><u>block</u></string>
+	<string name="ignore_underline"><u>ignore</u></string>
+	<string name="accept_underline"><u>accept</u></string>
 </resources>
