--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -69,12 +69,14 @@
     <string name="delete_message">delete message</string>
     <string name="title_activity_external_invite">ExternalInviteActivity</string>
     <string name="title_activity_contact_picker">ContactPickerActivity</string>
-    <string name="crash_toast_text">Unfortunately surespot just crashed. A report containing no personally identifying information has been sent to the developer.</string>
     <string name="block_underline"><u>block</u></string>
     <string name="ignore_underline"><u>ignore</u></string>
     <string name="accept_underline"><u>accept</u></string>
     <string name="title_activity_billing">BillingActivity</string>
-    
-    
+    <string name="crash_toast_text">houston we have a problem</string>
+    <string name="crash_dialog_title">surespot has crashed</string>
+    <string name="crash_dialog_text">It is with deep shame that we have to confess that an unexpected error has occurred.\n\nPlease help us to fix the issue by clicking OK to send an error report containing no personally identifying information.</string>
+    <string name="crash_dialog_comment_prompt">You can add your comments about the problem below if you like:</string>
+    <string name="crash_dialog_ok_toast">Thank you!</string>
 
 </resources>
