--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -57,11 +57,11 @@
     <string name="early_pre_beta">This is early pre-beta software, your logins and encrypted conversatations can and probably will be erased at any time.</string>
     <string name="incorrect_password_or_key">incorrect password or key</string>
     <string name="no_such_user">no such user</string>
-    <string name="roll_keys">roll keys</string>
-    <string name="key_management">key management...</string>
-    <string name="regenerate_keys">regenerate keys</string>
-    <string name="could_not_create_new_keys">could not create new keys</string>
-    <string name="keys_created">keys created and successfully uploaded to the server</string>
+    <string name="roll_keys">generate new key pairs</string>
+    <string name="key_management">generate new key pairs...</string>
+    <string name="regenerate_keys">generate new key pairs</string>
+    <string name="could_not_create_new_keys">could not create new key pairs</string>
+    <string name="keys_created">key pairs created and successfully uploaded to the server</string>
     <string name="close_tab">close tab</string>
     <string name="action_settings">Settings</string>
     <string name="no_messages">no messages</string>
