--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">surespot</string>
     <string name="friends">friends</string>
-    <string name="menu_settings">Settings</string>
+    <string name="menu_settings">settings</string>
     <string name="username_label">username:</string>
     <string name="password_label">password:</string>
     <string name="title_activity_main">surespot</string>
