update home tab messages

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -48,14 +48,15 @@
     <string name="assign_image">assign image</string>
     <string name="logout">logout</string>
     <string name="settings">settings</string>
-    <string name="welcome_to_surespot">Welcome to surespot. Messages sent using this software are end to end encrypted using 256 bit AES and 512+ bit ECC key exchange. Enjoy.</string>
-    <string name="no_friends">No friends...yet. Invite friends by entering their username and touching "invite".</string>
-    <string name="help_shortPress">Short press "home" to go to the home tab.</string>
-    <string name="help_longPress">Long press "home" to close the chat tab.</string>
+    <string name="welcome_to_surespot">Welcome to surespot. Messages sent using this app are end to end encrypted using 256 bit AES and 512+ bit ECC key exchange. Enjoy.</string>
+    <string name="no_friends">No friends...yet. Invite surespot users by entering their username and touching "invite".\nUse the "share surespot" menu option to invite future surespot users.</string>
     <string name="navigate_between_chat_tabs">Navigate between tabs by swiping.</string>
-    <string name="help_delete">Delete messages by long pressing the message. This will remove the message from the server and remote devices.</string>
-    <string name="help_imageZoom">Zoom images by clicking on the image.</string>
-    <string name="early_pre_beta">This is early pre-beta software, your logins and encrypted conversatations can and probably will be erased at any time.</string>
+    <string name="help_shortPress">Touch "home" to go to the home tab.</string>
+    <string name="help_longPress">Hold "home" to close the chat tab.</string>
+    
+    <string name="help_holdmessage">Hold on a message for message options.</string>
+    <string name="help_holdfriend">Hold on a friend for friend options.</string>
+    <string name="help_imageZoom">Zoom images by touching the image.</string>    
     <string name="incorrect_password_or_key">incorrect password or key</string>
     <string name="no_such_user">no such user</string>
     <string name="roll_keys">generate new key pairs</string>
